# NFS_Console

./: CMakeLists.txt  README.md  main.cpp  records.txt
Assets/: README.md
Config/: GameConfig.h  README.md
Core/: CollisionHandler.h  Game.h  README.md  RaceManager.h  State.h  StateManager.cpp  StateManager.h  Track.h
Core/Application/: Game.cpp  Game.h  GameMode.h  GameState.cpp  GameState.h  GameplayState.cpp  GameplayState.h  MainMenuState.cpp  MainMenuState.h
Core/Audio/: AudioManager.h
Core/Config/Settings/: GameConfig.cpp  GameConfig.h
Core/Config/Utils/: Logger.cpp  Logger.h  ScaleManager.cpp  ScaleManager.h  ScoreManager.cpp  ScoreManager.h  Timer.cpp  Timer.h
Core/Data/Managers/: BoostManager.cpp  BoostManager.h  Countdown.h  EntityManager.cpp  EntityManager.h  HUD.h  LightningManager.cpp  LightningManager.h  ObstacleManager.cpp  ObstacleManager.h  PauseMenuManager.cpp  PauseMenuManager.h  RoadManager.cpp  RoadManager.h  SpeedEffectManager.cpp  SpeedEffectManager.h  SpeedManager.cpp  SpeedManager.h  Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h
Core/Data/Managers/Audio/: AudioManager.cpp  AudioManager.h  MusicManager.cpp  MusicManager.h
Core/Data/Managers/Gameplay/: EntityManager.cpp  EntityManager.h  LightningManager.cpp  LightningManager.h  ObstacleManager.cpp  ObstacleManager.h  RoadManager.cpp  RoadManager.h  SpeedEffectManager.cpp  SpeedEffectManager.h  SpeedManager.cpp  SpeedManager.h
Core/Data/Managers/Interfaces/: SpeedController.h
Core/Data/Managers/UI/: Countdown.cpp  Countdown.h  HUD.cpp  HUD.h  PauseMenuManager.cpp  PauseMenuManager.h
Core/Data/Managers/Utility/: SaveManager.h  Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h
Core/Data/Physics/: CollisionHandler.cpp
Core/Data/SaveLoad/: SaveManager.cpp  SaveManager.h
Core/Data/States/: FinishState.cpp  FinishState.h  GameModeSelectionState.cpp  GameModeSelectionState.h  GameOverState.cpp  GameState.h  GameplayState.cpp  GameplayState.h  MenuState.cpp  RaceState.h  RecordsModeSelectionState.cpp  RecordsModeSelectionState.h  RecordsState.cpp  RecordsState.h  StateManager.h
Core/Data/States/Game/: FinishState.cpp  FinishState.h  GameOverState.cpp  GameOverState.h  GameplayState.cpp  GameplayState.h  RecordsState.cpp  RecordsState.h
Core/Data/States/Menu/: GameModeSelectionState.cpp  GameModeSelectionState.h  RecordsModeSelectionState.cpp  RecordsModeSelectionState.h  SettingsState.cpp  SettingsState.h
Core/Domain/Entities/: Car.cpp  Car.h  EnemyCar.cpp  EnemyCar.h  Entity.h  Lightning.cpp  Lightning.h  Obstacle.cpp  Obstacle.h  PlayerCar.cpp  PlayerCar.h  SpawnableEntity.h
Core/Domain/Entities/Bonuses/: Bonus.cpp  Bonus.h  Lightning.cpp  Lightning.h
Core/Domain/Entities/Cars/: Car.cpp  Car.h  EnemyCar.cpp  EnemyCar.h  PlayerCar.cpp  PlayerCar.h  TrafficCar.cpp  TrafficCar.h
Core/Domain/Entities/Obstacles/: Obstacle.cpp  Obstacle.h
Core/Domain/Entities/Track/: Checkpoint.cpp  Checkpoint.h  Track.cpp  Track.h
Core/Domain/Map/: Checkpoint.cpp  Checkpoint.h  Track.cpp
Core/Domain/Race/: RaceManager.cpp
Core/Domain/Rendering/: Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h
Core/Domain/UseCases/: EndGame.cpp  EndGame.h  StartRace.cpp  StartRace.h
Core/UI/Input/: InputHandler.cpp  InputHandler.h
Entities/: Bonus.h  Car.h  EnemyCar.h  Entity.h  Obstacle.cpp  Obstacle.h  PlayerCar.cpp  PlayerCar.h  README.md
Input/: InputHandler.h  README.md
Rendering/: README.md  Renderer.cpp  Renderer.h  TextureManager.h
States/: GameOverState.h  MenuState.h  README.md  RaceState.cpp  RaceState.h
UI/: README.md  UIManager.cpp  UIManager.h
Utils/: Logger.cpp  Logger.h  README.md  ScoreManager.h  Timer.h
